<resources>
    <string name="action_about">About</string>

    <string name="browse_fragment_label">Browse</string>
    <string name="image_generator_fragment_label">Image generator</string>
    <string name="database_fragment_label">Database</string>

    <string name="about_title">About</string>
    <string name="about_confirm">Ok</string>
    <string name="author">Author: Tijl Bormans, 2025</string>
    <string name="open_source_license_disclaimer">This app is open source under the AGPL-3.0 license.</string>
    <string name="git_url">https://github.com/Tijl-B/OpenGPSLogger-Android</string>
    <string name="osm_disclaimer">Map visualisation uses OpenStreetMap (OSM). Copyright disclaimer: https://www.openstreetmap.org/copyright</string>
    <string name="loading">loading</string>
    <string name="app_version">App version:</string>

    <string name="preset_highest">Highest frequency (highest battery usage)</string>
    <string name="preset_high">High frequency (high battery usage)</string>
    <string name="preset_medium">Medium frequency (medium battery usage)</string>
    <string name="preset_low">Low frequency (low battery usage)</string>
    <string name="preset_passive">Passive (no additional battery usage)</string>
    <string name="tracking_settings">Tracking settings</string>

    <string name="tracking_settings_title">Tracking settings</string>
    <string name="tracking_settings_confirm">Confirm</string>
    <string name="tracking_settings_cancel">Cancel</string>
    <string name="tracking_notification_content">Tracked %1$s points this session (polling mode: %2$s).</string>
    <string name="tracking_notification_bigtext">"Tracked %1$s points this session (polling mode: %2$s).\nLast update %3$s."</string>
    <string name="advanced_filters">Advanced Filters</string>
    <string name="min_accuracy">Min. accuracy (meters):</string>
    <string name="visualisationSettings">Image generator settings</string>
    <string name="dot_size">Dot radius (px):</string>
    <string name="line_size">Line width (px):</string>
    <string name="enable_lines">Enable lines:</string>
    <string name="auto">Auto</string>
    <string name="connect_lines_max_time_delta_minutes">Connect lines max time delta (minutes):</string>
    <string name="filter_outliers_angle">Filter outliers, min angle:</string>
    <string name="mapSettings">Map settings</string>
    <string name="name">Name:</string>
    <string name="url">URL:</string>
    <string name="see_raster_tile_providers_url">See https://wiki.openstreetmap.org/wiki/Raster_tile_providers</string>
    <string name="tile_server_url_hint">https://example.com/dir/{z}/{x}/{y}.png</string>
    <string name="tile_server_settings_title">Tile server settings</string>
    <string name="tile_server_settings_confirm">Confirm</string>
    <string name="color_seed">Color randomizer seed:</string>
    <string name="dot_color">Dot color</string>
    <string name="dots">Dots</string>
    <string name="lines">Lines</string>
    <string name="or_add_custom_tile_server">Or add a custom tile server:</string>
    <string name="opacity">Opacity (%):</string>
    <string name="osm_default_copyright">© openstreetmap.org/copyright</string>
    <string name="copyright_watermark">Copyright watermark:</string>
    <string name="tile_server_settings_cancel">cancel</string>
    <string name="visualisation_settings_title">Visualisation settings</string>
    <string name="visualisation_settings_cancel">cancel</string>
    <string name="visualisation_settings_confirm">confirm</string>
    <string name="advanced_filters_title">Advanced filters</string>
    <string name="advanced_filters_confirm">confirm</string>
    <string name="advanced_filters_cancel">cancel</string>
    <string name="recalculate_values">Recalculate density map values</string>
    <string name="density_map_settings">Browse settings</string>
    <string name="density_map_settings_confirm">Confirm</string>
    <string name="use_density_map">Use density map:</string>
    <string name="density_map">Density map</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="start_tracking">Start tracking</string>
    <string name="single_color">Single color</string>
    <string name="multi_color_1_year">Multi color (1 year)</string>
    <string name="multi_color_30_days">Multi color (30 days)</string>
    <string name="multi_color_1_day">Multi color (1 day)</string>
    <string name="multi_color_1_hour">Multi color (1 hour)</string>
    <string name="starting_tracking">Starting tracking</string>
    <string name="location_permission_missing">Location permission missing</string>
    <string name="notification_permission_missing">Notification permission missing</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_confirm">Ok</string>
    <string name="show_last_location">Show last location:</string>
    <string name="shadow_opacity">Shadow opacity (%):</string>
    <string name="backup">Backup raw data</string>
    <string name="import_">Import data</string>
    <string name="continue_">Continue</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="selected_points">Selected points: %1$s</string>
    <string name="default_selected_points">0</string>
    <string name="delete_selected_points">Delete selected points</string>
    <string name="confirm">confirm</string>
    <string name="database_tail">Database tail</string>
    <string name="delete_points_by_box">Delete points by box</string>
    <string name="delete_points_by_time">Delete points by time</string>
    <string name="delete_data">Delete data</string>
    <string name="export">Export</string>
    <string name="file_import_progress">Importing file %1$d / %2$d</string>
    <string name="processed_points_progress">Processed points: %1$d</string>
    <string name="delete_duplicate_points">Delete duplicate points</string>
    <string name="export_as_gpx">Export as GPX</string>
</resources>