<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.tijlb.opengpslogger.">

    <item
        android:id="@+id/action_trackingSettings"
        android:orderInCategory="100"
        android:title="@string/tracking_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_visualisationSettings"
        android:orderInCategory="101"
        android:title="@string/visualisationSettings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mapSettings"
        android:orderInCategory="102"
        android:title="@string/mapSettings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_densityMapSettings"
        android:orderInCategory="103"
        android:title="@string/densityMapSettings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_advancedFilters"
        android:orderInCategory="200"
        android:title="@string/advanced_filters"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>